# sscisubagent-skills

./: .dockerignore  .gitignore  AGENTS.md  AGENT_CONFIGURATION_VERIFICATION_REPORT.md  ALIENATION_ANALYSIS_INTEGRATION_REPORT.md  AUTHOR_INFO_UPDATE_REPORT.md  CHANGELOG.md  CLI_TESTING_REPORT.md  COMPLETE_SKILLS_INVENTORY.md  COMPREHENSIVE_SKILLS_TEST_REPORT.md  COMPREHENSIVE_TEST_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  EXPERT_AGENTS_VERIFICATION.md  FINAL_CHINESE_REPORT.md  FINAL_REPORT_DETAILS.md  FINAL_REPORT_SUMMARY.md  FINAL_SUMMARY.md  IFLOW.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INSTALLATION_GUIDE.md  INSTALLATION_TROUBLESHOOTING.md  INTELLIGENCE_AGENT_ANALYSIS.md  INTELLIGENT_USAGE_GUIDE.md  JIEBA_UV_INTEGRATION_COMPLETE.md  LICENSE  LITERATURE_ACCESS_REALITY_REPORT.md  LITERATURE_EXPERT_STATUS.md  LITERATURE_SEARCH_LOGIC.md  MARXIST_THEORY_VALIDATION_REPAIR_REPORT.md  MISSING_FUNCTIONS_SPECIFICATION.md  NPM_INSTALLATION.md  NPM_PUBLISH_GUIDE.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_TECHNICAL_DETAILS.md  PROJECT_CLEANUP_SUMMARY.md  PUBSCHOLAR_SKILL_SUMMARY.md  (+64 more)
agents/: ant-expert.md  (+15 more)
data-analysis/: SKILL.md  pyproject.toml
data-analysis/prompts/: data-cleaning-outline.md  exploratory-analysis.md
fsqca-analysis/: SKILL.md  pyproject.toml
fsqca-analysis/assets/templates/: report_template.md
fsqca-analysis/prompts/: calibration-guidance-outline.md  calibration-guidance.md  result-interpretation-outline.md  theoretical-analysis-outline.md
fsqca-analysis/references/: BEST_PRACTICES.md  METHODOLOGY-outline.md  METHODOLOGY.md
fsqca-analysis/scripts/: calibration.py  integrated_analysis.py  truth_table.py
research-design/: DEPENDENCY_MANAGEMENT.md  pyproject.toml
research-design/assets/templates/: research_design_template.md
research-design/prompts/: analysis-strategy-outline.md  analysis-strategy.md  data-planning-outline.md  ethics-review-outline.md  ethics-review.md  method-selection-outline.md
research-design/references/: best-practices.md
research-design/scripts/: literature_analysis.py  method_matching.py
skills/alienation-analysis/: SKILL.md  pyproject.toml
skills/alienation-analysis/prompts/: core-analysis-framework.md
skills/alienation-analysis/scripts/: __init__.py  alienation_analysis_engine.py  classify_alienation_types.py  consumer_behavior_analysis.py  digital_wellbeing_evaluation.py  generate_intervention_plan.py  materialism_assessment.py  technology_dependency_analysis.py  workplace_satisfaction_analysis.py
skills/ant-expert/: SKILL.md  integration_with_trusted_scraper.md  pyproject.toml
skills/ant-expert/modules/: network_analysis.py  participant_identification.py  translation_process.py
skills/ant-expert/scripts/: ant_expert_analyzer.py
skills/ant-participant-identification/: SKILL.md  pyproject.toml
skills/ant-subagent/: SKILL.md  pyproject.toml
skills/ant-subagent/modules/: network_analysis.py
skills/ant-translation-process/: SKILL.md  pyproject.toml
skills/arxiv-paper-search/: ARXIV_SKILL_COMPLETION_REPORT.md  DEPENDENCY_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  README.md  SKILL.md  pyproject.toml  requirements.txt  test_papers.csv
skills/arxiv-paper-search/references/: ADVANCED_USAGE.md  API_REFERENCE.md  ARXIV_CATEGORIES.md  USER_GUIDE.md
skills/arxiv-paper-search/scripts/: arxiv_searcher.py
skills/checking-theory-saturation/: SKILL.md  pyproject.toml
skills/checking-theory-saturation/references/: README.md
skills/checking-theory-saturation/scripts/: assess_saturation.py
skills/checking-theory-saturation/tests/: test_assess_saturation.py
skills/data-analysis/: SKILL.md  pyproject.toml
skills/data-analysis/prompts/: data-cleaning.md  data-understanding-outline.md  data-understanding.md  exploratory-analysis-outline.md  modeling-strategy.md
skills/did-analysis/: SKILL.md  pyproject.toml
skills/did-analysis/prompts/: experimental-design.md
skills/did-analysis/references/: BEST_PRACTICES.md
skills/did-analysis/scripts/: parallel_trend.py  robustness_test.py  test_integration.py
skills/digital-durkheim/: SKILL.md  pyproject.toml
skills/digital-durkheim/prompts/: collective-consciousness.md  social-fact-identification.md
skills/digital-durkheim/scripts/: durkheim_analysis_results.json  integrated_durkheim_analyzer.py
skills/digital-marx/: SKILL.md  pyproject.toml
skills/digital-marx-expert/: SKILL.md  pyproject.toml
skills/digital-marx-expert/modules/: capital_analysis.py  class_analysis.py  historical_materialism.py
skills/digital-marx-expert/scripts/: digital_marx_expert_analyzer.py
skills/digital-marx/prompts/: material-base-analysis.md  production-relations-analysis.md  superstructure-analysis.md
skills/digital-marx/scripts/: integrated_marx_analyzer.py  marxist_theory_validator.py  quality_validator.py
skills/digital-weber/: SKILL.md  pyproject.toml
skills/digital-weber/prompts/: comparative-research.md  theoretical-interpretation.md
skills/field-boundary-identification/: SKILL.md  pyproject.toml
skills/fsqca-analysis/: SKILL.md  comprehensive_test.py  comprehensive_test_report.json  comprehensive_test_report.md  fsqca_analysis_report.md  pyproject.toml  test_fsqca.py
skills/msqca-analysis/: SKILL.md  integrated_analysis_report.md  pyproject.toml
skills/network-computation-expert/: SKILL.md  pyproject.toml
skills/operations-analysis/: INFO.md  README.md  SKILL.md  prompts.txt  pyproject.toml  reference.md  skill.js  skill.json
skills/performing-axial-coding/: SKILL.md  pyproject.toml
skills/performing-centrality-analysis/: SKILL.md  pyproject.toml
skills/performing-network-computation/: SKILL.md  pyproject.toml
skills/performing-open-coding/: SKILL.md  pyproject.toml
skills/performing-selective-coding/: SKILL.md  pyproject.toml
skills/processing-network-data/: SKILL.md  pyproject.toml
skills/research-design/: README.md  SKILL.md  pyproject.toml  test_research_design.py
skills/trusted-web-scraper/: CONFIG.yaml  README.md  SKILL.md  final_test.json  pyproject.toml
(+717 files in other folders)
