[project]
name = "ssci-subagent-skills"
version = "1.0.0"
description = "SSCI中文社会科学研究技能包，提供高级依赖包支持和优雅降级机制"
authors = [{name = "Chinese Social Sciences Subagents", email = "research@chinese-ssci.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jieba>=0.42.1",
    "requests>=2.25.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
statistics = [
    "statsmodels>=0.13.0",
    "pingouin>=0.5.0",
    "scikit-learn>=1.0.0",
]
network-analysis = [
    "igraph>=0.10.0",
    "python-louvain>=0.15.0",
    "community>=1.0.0b1",
]
nlp = [
    "nltk>=3.6",
    "spacy>=3.4.0",
    "transformers>=4.20.0",
]
psychometrics = [
    "factor-analyzer>=0.5.0",
    "pingouin>=0.5.0",
    "statsmodels>=0.13.0",
]
all = [
    "ssci-subagent-skills[statistics,network-analysis,nlp,psychometrics]",
]

[project.urls]
Homepage = "https://github.com/chinese-ssci-research/ssci-subagent-skills"
Repository = "https://github.com/chinese-ssci-research/ssci-subagent-skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*", "agents*", "common*"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# 配置依赖管理器
[tool.dependency-manager]
enabled = true
auto-install = true
fallback-enabled = true