[project]
name = "alienation-analysis"
version = "2.0.0"
description = "鍩轰簬椹厠鎬濅富涔夊紓鍖栫悊璁猴紝瀵圭幇浠ｇぞ浼氫腑鐨勫姵鍔ㄥ紓鍖栥€佺ぞ浼氬叧绯诲紓鍖栥€佹秷璐瑰紓鍖栧拰鎶€鏈紓鍖栫幇璞¤繘琛屾繁搴﹀垎鏋愮殑鎶€鑳斤紝杩愮敤椹厠鎬濈殑鍥涢噸寮傚寲鐞嗚妗嗘灦锛岃瘎浼板紓鍖栫▼搴﹀苟鎻愬嚭瓒呰秺璺緞"
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "jieba>=0.42.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
