[tool.poetry]
name = "ant-expert"
version = "1.0.0"
description = "行动者网络理论专家分析技能，整合参与者识别、网络分析和转译过程追踪功能"
authors = ["chinese-social-sciences-subagents"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = {version = "^1.3.0", optional = true}
numpy = {version = "^1.21.0", optional = true}
networkx = {version = "^2.6.0", optional = true}
matplotlib = {version = "^3.4.0", optional = true}
seaborn = {version = "^0.11.0", optional = true}
scipy = {version = "^1.7.0", optional = true}
statsmodels = {version = "^0.13.0", optional = true}
pingouin = {version = "^0.5.0", optional = true}

[tool.poetry.extras]
analysis = ["pandas", "numpy", "networkx", "matplotlib", "seaborn", "scipy", "statsmodels", "pingouin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ant-expert-analyzer = "scripts.ant_expert_analyzer:main"