[project]
name = "ant-participant-identification"
version = "2.0.0"
description = "鍩轰簬琛屽姩鑰呯綉缁滅悊璁猴紝璇嗗埆鍜屽垎鏋愮綉缁滀腑浜虹被鍜岄潪浜虹被琛屽姩鑰呯殑鎶€鑳斤紝杩愮敤骞夸箟瀵圭О鎬у師鍒欏拰杞瘧鐞嗚锛岃瘑鍒綉缁滀腑鐨勫叧閿弬涓庤€呭拰鍏崇郴涓粙"
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
