[project]
name = "checking-theory-saturation"
version = "1.0.0"
description = "鐞嗚楗卞拰搴︽楠屽伐鍏烽泦锛氭蹇甸ケ鍜屻€佽寖鐣村畬鏁淬€佸叧绯荤ǔ瀹氥€佺悊璁哄畬鏁?
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[tool.uv]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

