[project]
name = "data-analysis"
version = "1.0.0"
description = "鎵ц鏁版嵁鍒嗘瀽锛屽寘鎷暟鎹竻娲椼€佹帰绱㈡€у垎鏋愩€佺粺璁″缓妯°€佸彲瑙嗗寲鍜岀粨鏋滆В閲婄瓑銆傜粨鍚堝畾鎬ф礊瀵熶笌瀹氶噺璁＄畻銆?
authors = [{name = "zhangshuren", email = "zhangshuren@hznu.edu.cn"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.950"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_analysis*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.950"
]
