[tool.poetry]
name = "digital-marx-expert"
version = "1.0.0"
description = "数字马克思专家分析技能，整合历史唯物主义分析、阶级结构分析、资本运动规律分析和意识形态批判功能"
authors = ["chinese-social-sciences-subagents"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = {version = "^1.3.0", optional = true}
numpy = {version = "^1.21.0", optional = true}
scikit-learn = {version = "^1.0.0", optional = true}
matplotlib = {version = "^3.4.0", optional = true}
seaborn = {version = "^0.11.0", optional = true}
jieba = {version = "^0.42.1", optional = true}
networkx = {version = "^2.6.3", optional = true}

[tool.poetry.extras]
analysis = ["pandas", "numpy", "scikit-learn"]
visualization = ["matplotlib", "seaborn"]
nlp = ["jieba"]
network = ["networkx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
digital-marx-expert-analyzer = "scripts.digital_marx_expert_analyzer:main"