[project]
name = "digital-marx"
version = "2.0.0"
description = "鍩轰簬椹厠鎬濅富涔夌悊璁猴紝瀵规暟瀛楁椂浠ｇぞ浼氱粡娴庣幇璞¤繘琛屽垎鏋愮殑鎶€鑳斤紝杩愮敤鍘嗗彶鍞墿涓讳箟銆佽京璇佸敮鐗╀富涔夌瓑鐞嗚妗嗘灦锛岃瘎浼版暟瀛楄祫鏈富涔夌壒寰佸拰绀句細涓讳箟鍙戝睍璺緞"
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "jieba>=0.42.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
