[project]
name = "field-boundary-identification"
version = "2.0.0"
description = "鍩轰簬甯冭开鍘勫満鍩熺悊璁猴紝璇嗗埆鍜屽垎鏋愮ぞ浼氬満鍩熻竟鐣屻€佽寖鍥村拰鎺掗櫎鏈哄埗鐨勬妧鑳斤紝杩愮敤鍦哄煙鐞嗚妗嗘灦锛岀‘瀹氬満鍩熺殑鐣岄檺銆佸寘鍚拰鎺掗櫎鏈哄埗浠ュ強涓庡叾浠栧満鍩熺殑鍏崇郴"
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "jieba>=0.42.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
