[project]
name = "operations-analysis"
version = "2.0.0"
description = "鍩轰簬杩愯惀绠＄悊鐞嗚锛屽浼佷笟杩愯惀娴佺▼銆佹晥鐜囥€佽川閲忋€佷緵搴旈摼绛夎繘琛岀郴缁熷垎鏋愮殑鎶€鑳斤紝杩愮敤绮剧泭鐢熶骇銆佸叚瑗挎牸鐜涖€佷緵搴旈摼绠＄悊绛夌悊璁烘鏋讹紝璇勪及浼佷笟杩愯惀鏁堣兘鍜屼紭鍖栨満浼?
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
