[project]
name = "performing-axial-coding"
version = "1.0.0"
description = "扎根理论轴心编码技能 - 范畴构建与关系分析"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=scripts --cov-report=term-missing"
