[project]
name = "performing-axial-coding"
version = "1.0.0"
description = "鎵庢牴鐞嗚杞村績缂栫爜鎶€鑳?- 鑼冪暣鏋勫缓涓庡叧绯诲垎鏋?
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=scripts --cov-report=term-missing"

