[project]
name = "performing-centrality-analysis"
version = "1.0.0"
description = "绀句細缃戠粶涓績鎬у垎鏋愬伐鍏烽泦锛氬害涓績鎬с€佹帴杩戜腑蹇冩€с€佷腑浠嬩腑蹇冩€с€佺壒寰佸悜閲忎腑蹇冩€?
requires-python = ">=3.8"
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[tool.uv]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.uv.cache]
keys = ["networkx"]

