[project]
name = "performing-network-computation"
version = "2.0.0"
description = "鍩轰簬绀句細缃戠粶鍒嗘瀽鐞嗚锛屾墽琛岀綉缁滄瀯寤恒€佷腑蹇冩€ц绠椼€佺ぞ鍖烘娴嬨€佺綉缁滃彲瑙嗗寲绛夌綉缁滃垎鏋愪换鍔＄殑鎶€鑳斤紝杩愮敤鍥捐鍜岀綉缁滃垎鏋愭柟娉曪紝鍒嗘瀽鍏崇郴缁撴瀯鍜岀綉缁滅壒鎬?
authors = [{name = "SSAI Team", email = "contact@agentpsy.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "networkx>=3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
