[project]
name = "performing-open-coding"
version = "1.0.0"
description = "鎵庢牴鐞嗚寮€鏀剧紪鐮佹妧鑳?- 涓枃璐ㄦ€ф暟鎹垎鏋?
requires-python = ">=3.8"
dependencies = [
    "jieba>=0.42.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
# 浣跨敤鍥藉唴闀滃儚鍔犻€?[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

# 缂撳瓨jieba璇嶅吀
[tool.uv.cache]
keys = ["jieba"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=scripts --cov-report=term-missing"

