[project]
name = "performing-selective-coding"
version = "1.0.0"
description = "閫夋嫨寮忕紪鐮佸伐鍏烽泦锛氭牳蹇冭寖鐣磋瘑鍒€佹晠浜嬬嚎鏋勫缓銆佺悊璁烘暣鍚?
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[tool.uv]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.uv.cache]
keys = ["networkx", "scikit-learn"]

